--- a/app/assets/stylesheets/subscriptions/new.scss
+++ b/app/assets/stylesheets/subscriptions/new.scss
@@ -91,15 +91,6 @@
     }
   }
 
-  // .select-birthday {
-  //   width: 50%;
-
-  //   select {
-  //     font-size: .8em;
-  //     width: 96%;
-  //   }
-  // }
-
   .child-birthday {
     label {
       position: absolute;
@@ -114,17 +105,13 @@
     }
   }
 
-  .checkbox label, .checkbox input {
+  .billing-address-checkbox label, .gift-message-checkbox label, .checkbox input {
     cursor: pointer;
   }
 
   .gift-message textarea {
     height: 120px;
     width: 70%;
-  }
-
-  .Grid {
-    // margin-right: 10px
   }
 
   .form-section {
@@ -153,6 +140,69 @@
     label {
       vertical-align: middle;
       margin-left: 6px;
+    }
+  }
+
+  .terms-conditions-checkbox {
+    margin-top: 50px;
+    padding: 10px;
+  }
+
+  .terms-link {
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
+  .terms-conditions-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(84, 84, 84, .5);
+    z-index: 1000000;
+
+    /*http://stackoverflow.com/questions/2005954/center-element-with-positionfixed*/
+    #terms-conditions {
+      position: absolute;
+      width: 100%;
+      top: 50%;
+      left: 25%;
+      margin-top: -200px;
+      z-index: 1000001;
+    }
+
+    .close-button {
+      font-size: 25px;
+      width: 35px;
+      height: 35px;
+      color: white;
+      border: 3px solid white;
+      border-radius: 50%;
+      text-align: center;
+      float: right;
+      cursor: pointer;
+      margin-top: -34px;
+      margin-left: 6px;
+    }
+
+    .terms-conditions-content {
+      height: 400px;
+      padding: 50px;
+      background: white;
+      color: black;
+      overflow: scroll;
+      border: 10px solid $dark-gray;
+
+      h3 {
+        margin-top: 0;
+      }
+
+      .terms-conditions-body {
+        border: 3px solid black;
+        padding: 15px;
+      }
     }
   }
 
