--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
           </br></br>
           One box with three books shipped to you every month for $29.99/month.
         </p>
-        <a href="/join" class="button-yellow">Buy now</a>
+        <a href="/join" class="button button-yellow">Buy now</a>
         <a href="/our_box" class="learn-more">Learn more</a>
       </div>
 
@@ -67,7 +67,7 @@
     </div>
 
     <div class="sign-up-links">
-      <a href="/join" class="button-yellow">Join now</a>
+      <a href="/join" class="button button-yellow">Join now</a>
       <a href="/join" class="button">Gift it</a>
     </div>
   </section>
