--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <%= render "shared/header" %>
 
   <div id="page-title">
-    <h1>Your Account</h1>
+    <h1><%= @user.first_name %>'s Account</h1>
   </div>
 
   <div class="user-show-container">
