--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -292,7 +292,7 @@
           I agree to the <span class="terms-link">Terms and Conditions</a>
         </label>
       </div>
-      <input type="submit" class="button" value="Checkout">
+      <input type="submit" class="button" value="Review Order">
     </form>
   </div>
 
