--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,66 +1,10 @@
 <main id="user-show">
   <%= render "shared/header" %>
 
-  <div id="page-title">
-    <h1><%= @user.first_name %>'s Account</h1>
-  </div>
-
-  <div class="user-show-container">
-
-    <div class="Grid user-nav">
-      <span class="Grid-cell border-cell u-size1of2">
-        <div id="subscriptions" class="nav-item">
-          Subscriptions
-        </div>
-      </span>
-      <span class="Grid-cell u-size1of2">
-        <div id="account-info" class="nav-item inactive">
-          Account Info
-        </div>
-      </span>
-    </div>
-
-    <section class="user-main">
-      <div id="user-show-subscriptions">
-        <h2>Your Subscriptions</h2>
-        <div class="subscription-types">
-          <ul>
-            <li><span id="active-subscriptions" class="nav-item">Active</span></li>
-            <li><span id="inactive-subscriptions" class="nav-item inactive">History</span></li>
-          </ul>
-        </div>
-        <div class="subscriptions">
-          <div class="active-subscriptions">
-            <% @active_subscriptions.each do |subscription| %>
-              <%= react_component('Subscription', subscription: subscription) %>
-              <%# render partial: "shared/subscription", locals: { subscription: subscription } %>
-            <% end %>
-          </div>
-          <div class="inactive-subscriptions hidden">
-            <% @inactive_subscriptions.each do |subscription| %>
-              <%= render partial: "shared/subscription", locals: { subscription: subscription } %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-
-      <div id="user-show-account-info" class="hidden">
-        <h2>Your Account Info</h2>
-        <div class="user-account-info">
-          <div>
-            <%= @user.display_name %>
-          </div>
-          <div>
-            <%= @user.email %>
-          </div>
-          <div>
-            <%= @user.phone %>
-          </div>
-          <%= render partial: "shared/address", locals: { entity: @user } %>
-
-        </div>
-      </div>
-
-    </section>
-  </div>
+  <%= react_component(
+    'UserShow',
+    activeSubscriptions: @active_subscriptions,
+    inactiveSubscriptions: @inactive_subscriptions,
+    user: @react_user)
+  %>
 </main>
