Creates initial SubscriptionNew react component

--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,298 +1,16 @@
 <main id="join">
   <%= render "shared/header" %>
 
-  <%= react_component('SubscriptionNew') %>
-
-  <div class="subscription-container">
-    <%= form_tag('join', class: "subscription-form") do %>
-      <section class="form-section">
-        <h3>CHOOSE SUBSCRIPTION:</h3>
-        <div class="Grid subscription-options">
-          <div class="Grid-cell u-size1of3 subscription-option">
-            <div class="subscription-info">
-              <span>
-                <span class="month-number">1 Month</span> Subscription
-              </span>
-              <span>
-                $<%= @cost.one_month.to_s %> / month
-              </span>
-            </div>
-            <%= radio_button_tag("subscription_type", 1) %>
-          </div>
-          <div class="Grid-cell u-size1of3 subscription-option">
-            <div class="subscription-info">
-              <span>
-                <span class="month-number">3 Month</span> Subscription
-              </span>
-              <span>
-                $<%= @cost.three_month.to_s %> / month
-              </span>
-            </div>
-            <%= radio_button_tag("subscription_type", 3) %>
-          </div>
-          <div class="Grid-cell u-size1of3 subscription-option">
-            <div class="subscription-info">
-              <span>
-                <span class="month-number">6 Month</span> Subscription
-              </span>
-              <span>
-                $<%= @cost.six_month.to_s %> / month
-              </span>
-            </div>
-            <%= radio_button_tag("subscription_type", 6) %>
-          </div>
-        </div>
-      </section>
-
-      <section class="form-section">
-        <h3>CHILD INFO</h3>
-        <div class="Grid">
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "child_first_name",
-                  nil,
-                  placeholder: "* Child's first name",
-                  class: "border-right",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "child_last_name",
-                  nil,
-                  placeholder: "* Child's last name",
-                  class: "float-right",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell child-birthday u-size1of2">
-            <div class="Grid-cell u-size4of4">
-              <%= date_field_tag(
-                    "child_birthday",
-                    value=nil,
-                    class: "border-right",
-                    placeholder: "mm/dd/yyyy")
-              %>
-            </div>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= select_tag(
-                  "child_gender",
-                  options_for_select(["Boy", "Girl"]),
-                  class: "float-right",
-                  include_blank: "* Gender",
-                  required: true)
-            %>
-          </div>
-        </div>
-
-        <div class="Grid">
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "subscription_address_line1",
-                  nil,
-                  class: "border-right",
-                  placeholder: "* Shipping Address Line 1",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "subscription_address_line2",
-                  nil,
-                  class: "float-right",
-                  placeholder: "  Shipping Address Line 2")
-            %>
-          </div>
-          <div class="Grid-cell u-size1of3">
-            <%= text_field_tag(
-                  "subscription_city",
-                  nil,
-                  class: "border-right",
-                  placeholder: "* City",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of3">
-            <%= select_tag(
-                  "subscription_state",
-                  options_for_select(@states),
-                  class: "border-right",
-                  include_blank: "* Select state...",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of3">
-            <%= text_field_tag(
-                  "subscription_zip",
-                  nil,
-                  placeholder: "* Zip Code",
-                  class: "float-right",
-                  required: true)
-            %>
-          </div>
-        </div>
-
-        <h4>Is this a gift?</h4>
-        <div class="checkbox gift-message-checkbox">
-          <%= check_box_tag(
-                'is_gift',
-                false)
-          %>
-          <label class="is-gift">
-            Yes! Send as a gift!
-          </label>
-        </div>
-
-        <div class="gift-message hidden">
-          <%= text_area_tag(
-                "gift_message",
-                nil,
-                placeholder: "Gift message (optional)")
-          %>
-        </div>
-      </section>
-
-      <section class="form-section">
-        <h3>ACCOUNT INFORMATION</h3>
-        <div class="Grid">
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "user_first_name",
-                  nil,
-                  class: "border-right",
-                  placeholder: "* First name",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "user_last_name",
-                  nil,
-                  class: "float-right",
-                  placeholder: "* Last name",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "password",
-                  nil,
-                  type: :password,
-                  class: "border-right",
-                  placeholder: "* Password",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "password_confirmation",
-                  nil,
-                  type: :password,
-                  placeholder: "* Re-type password",
-                  class: "float-right",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "email",
-                  nil,
-                  type: :email,
-                  pattern: "[^@]+@[^@]+\.[a-zA-Z]{2,}",
-                  class: "border-right",
-                  placeholder: "* Email",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field(
-                  "phone",
-                  nil,
-                  class: "float-right",
-                  placeholder: "  Phone (xxx) xxx-xxxx")
-            %>
-          </div>
-        </div>
-
-        <div class="checkbox billing-address-checkbox">
-          <%= check_box_tag(
-                'same_billing_address',
-                false)
-          %>
-          <label class="same-billing-address">
-            Same as shipping address
-          </label>
-        </div>
-
-        <div class="Grid billing-address">
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "user_address_line1",
-                  nil,
-                  class: "border-right",
-                  placeholder: "* Billing Address Line 1",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of2">
-            <%= text_field_tag(
-                  "user_address_line2",
-                  nil,
-                  class: "float-right",
-                  placeholder: "Billing Address Line 2")
-            %>
-          </div>
-          <div class="Grid-cell u-size1of3">
-            <%= text_field_tag(
-                  "user_city",
-                  nil,
-                  class: "border-right",
-                  placeholder: "* City",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of3">
-            <%= select_tag(
-                  "user_state",
-                  options_for_select(@states),
-                  class: "border-right",
-                  include_blank: "* Select state...",
-                  required: true)
-            %>
-          </div>
-          <div class="Grid-cell u-size1of3">
-            <%= text_field_tag(
-                  "user_zip",
-                  nil,
-                  placeholder: "* Zip Code",
-                  class: "float-right",
-                  required: true)
-            %>
-          </div>
-        </div>
-      </section>
-
-    <% end %>
-
-    <h3 class="section-label">PAYMENT</h3>
-    <form id="checkout" method="post" action="/checkout">
-      <div id="payment-form"></div>
-      <div class="flash">
-      </div>
-
-      <div class="checkbox terms-conditions-checkbox">
-        <%= check_box_tag(
-              'terms_conditions',
-              false)
-        %>
-        <label>
-          I agree to the <span class="terms-link">Terms and Conditions</a>
-        </label>
-      </div>
-      <input type="submit" class="button" value="Review Order">
-    </form>
-  </div>
+  <%= react_component(
+    'SubscriptionNew',
+    {
+      subscription: @subscription,
+      user: @user,
+      child: @child,
+      states: @states,
+      cost: @cost
+    })
+  %>
 
   <div class="modal-overlay-wrapper terms-conditions-wrapper hidden">
     <div id="terms-conditions">
@@ -354,8 +72,8 @@
       </div>
 
       <div class="Grid confirm-buttons">
-          <input class="button button-yellow close-confirm" value="Go Back">
-          <input type="submit" class="button confirm-submit" value="Place My Order">
+        <input class="button button-yellow close-confirm" value="Go Back">
+        <input type="submit" class="button confirm-submit" value="Place My Order">
       </div>
     </div>
   </div>
