--- a/app/assets/stylesheets/subscriptions/new.scss
+++ b/app/assets/stylesheets/subscriptions/new.scss
@@ -70,11 +70,10 @@
 
     .subscription-option {
       padding: 15px;
-
+      cursor: pointer;
     }
 
     .subscription-info {
-      margin-bottom: 23px;
     }
 
     span {
